# php-cli

./: .gitignore  Makefile
SOURCES/: .gitignore  Makefile.am  PHPCLI.pm  README.apt  configure.ac  ea_php_cli.pm  php-cgi.pl  php-cli.pl  php-cli.tar  php-lsapi.pl
SOURCES/am-tools/: .gitignore  README.apt
SOURCES/include/: Makefile.am  cli-config.h  cli.h  htaccess.h  path.h  paths-config.h  strategy.h
SOURCES/m4/: gcov.m4
SOURCES/php-cli/: .gitignore  Makefile  Makefile.am  README.apt  bootstrap  configure.ac  parse_conf.c  parse_yaml.c  php-cli.c  test_yaml.c
SOURCES/php-cli-0.0.1/: Makefile  README.txt  parse_conf.c  php-cli.c  php-cli.h  test_yaml_token.c
SOURCES/php-cli-0.0.2/: php-cli.c  php-cli.yaml  php_yaml.c
SOURCES/php-cli-0.0.3/: parse_yaml.c  php-cli.c
SOURCES/php-cli/am-tools/: README.apt
SOURCES/php-cli/include/: Makefile.am  cli-config.h  cli.h  htaccess.h  path.h  php-cli.h  strategy.h
SOURCES/php-cli/src/: Makefile.am  cli-config.c  cli.c  htaccess.c  path.c  php-cgi.c  php-cli.c  php-cli.yaml  php-lightspeed.c  php_yaml.c  strategy.c
SOURCES/php-cli/tests/: Makefile.am  cli_config_read_cli_config_001.c  cli_config_read_cli_config_002.c  cli_config_read_cli_config_003.c  cli_config_read_cli_config_004.c  cli_config_read_cli_config_005.c  cli_config_read_cli_config_006.c  cli_config_read_cli_config_007.c  cli_config_read_cli_config_008.c  cli_config_read_cli_config_009.c  cli_config_read_cli_config_010.c  cli_config_read_cli_config_011.c  cli_config_read_cli_config_012.c  cli_config_read_cli_config_013.c  cli_config_read_cli_config_014.c  cli_get_last_file_001.c  cli_get_last_file_002.c  cli_get_last_file_003.c  cli_get_last_file_004.c  cli_get_last_file_005.c  cli_get_last_file_006.c  cli_get_last_file_007.c  cli_get_php_version_001.c  cli_get_php_version_002.c  cli_get_php_version_003.c  cli_get_php_version_004.c  cli_get_php_version_005.c  cli_get_verbose_005.c  cli_get_verbose_006.c  cli_get_verbose_007.c  cli_get_verbose_008.c  htaccess_get_php_version_from_file_001.c  htaccess_get_php_version_from_file_002.c  htaccess_get_php_version_from_file_003.c  htaccess_get_php_version_from_file_004.c  htaccess_get_php_version_from_file_005.c  htaccess_get_php_version_from_file_006.c  htaccess_get_php_version_from_file_007.c  htaccess_get_php_version_from_file_008.c  parse_conf.c  (+46 more)
SOURCES/src/: .gitignore  Makefile.am  cli-config.c  cli.c  htaccess.c  path.c  paths-config.c  php-cgi.c  php-cli.c  php-cli.yaml  php-lightspeed.c  php_yaml.c  strategy.c
SOURCES/tests/: .gitignore  Makefile.am  cli_config_read_cli_config_002.c  cli_config_read_cli_config_003.c  cli_config_read_cli_config_006.c  cli_config_read_cli_config_008.c  cli_config_read_cli_config_010.c  cli_get_last_file_002.c  cli_get_last_file_003.c  cli_get_last_file_004.c  cli_get_php_package_001.c  cli_get_php_package_002.c  cli_get_php_package_003.c  cli_get_php_package_004.c  cli_get_php_package_005.c  cli_get_php_version_002.c  cli_get_verbose_001.c  cli_get_verbose_002.c  cli_get_verbose_003.c  cli_get_verbose_004.c  htaccess_get_php_package_from_file_001.c  htaccess_get_php_package_from_file_002.c  htaccess_get_php_package_from_file_003.c  htaccess_get_php_package_from_file_004.c  htaccess_get_php_package_from_file_005.c  htaccess_get_php_package_from_file_006.c  htaccess_get_php_package_from_file_007.c  htaccess_get_php_package_from_file_008.c  htaccess_get_php_version_from_file_008.c  path_basedir_005.c  path_get_htaccess_php_package_001.c  path_get_htaccess_php_package_002.c  path_get_htaccess_php_package_003.c  path_get_htaccess_php_package_004.c  path_get_htaccess_php_package_005.c  path_get_htaccess_php_package_006.c  path_get_htaccess_php_package_007.c  path_get_htaccess_php_package_008.c  path_get_htaccess_php_package_009.c  path_get_htaccess_php_version_002.c  (+78 more)
SPECS/: ea-php-cli.spec
debify/debian/: ea-php-cli-lsphp.install  ea-php-cli.install  override_dh_auto_install.sh  rules
t/: ea_php_cli.pm.t  install-PHPCLI.t  php-cli-scripts.t
t/.spec_helpers/: all_type_funcs.pl
