## ea-php-cli - include/Makefile.am          Copyright 2016 cPanel, Inc.
##                                                  All rights Reserved.
## copyright@cpanel.net                                http://cpanel.net
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
## 
##     http://www.apache.org/licenses/LICENSE-2.0
## 
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

noinst_HEADERS = cli.h cli-config.h htaccess.h path.h paths-config.h php-cli.h strategy.h
